comit diseño